K3S/tools/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: open-webui
  name: open-webui
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.0.0.86
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:0.8.12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: open-webui-volume
              mountPath: /app/backend/data
              subPath: open-webui
      volumes:
        - name: open-webui-volume
          persistentVolumeClaim:
            claimName: open-webui-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: open-terminal
  name: open-terminal
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-terminal
  template:
    metadata:
      labels:
        app: open-terminal
    spec:
      containers:
        - name: open-terminal
          image: ghcr.io/open-webui/open-terminal:0.11.34
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: open-terminal-volume
              mountPath: /home/user
              subPath: open-terminal
      volumes:
        - name: open-terminal-volume
          persistentVolumeClaim:
            claimName: open-terminal-pvc
