K3S/tools/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
  name: open-webui-svc
  namespace: open-webui
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - port: 8080
